--- a/Week8/W8 Project/styles.css
+++ b/Week8/W8 Project/styles.css
@@ -17,7 +17,7 @@ h1 {
 }
 
 .div-2 {
-    background-color:azure; 
+    background-color:coral; 
     border-style: solid; 
     border-color: black; 
     border-radius: 3px;
@@ -41,13 +41,13 @@ h1 {
     background-color: red;
 }
 
-.every-even li:nth-child(even) {
+/* .every-even li:nth-child(even) {
     background-color: red;
 }
 
 .every-third li:nth-child(3n) {
     background-color: red;
-}
+} */
 
 img {
     float: center;
@@ -56,6 +56,9 @@ img {
 table {
     border-collapse: collapse;
     width: 15%;
+    border-style: solid;
+    border-width: 3px;
+    border-color: black;
 }
 
 th, td {
