--- a/Week8/W8 Project/styles.css
+++ b/Week8/W8 Project/styles.css
@@ -32,7 +32,16 @@ h2 {
     text-decoration: none;
 }
 
-.div-1 {
+div {
+    background-color:black;
+    color: white;
+    border-style: solid; 
+    border-color: rgb(255, 255, 255); 
+    border-radius: 3px;
+    text-align: center;
+}
+
+.div2 {
     background-color:azure; 
     border-style: solid; 
     border-color: white; 
@@ -40,13 +49,15 @@ h2 {
     text-decoration: none;
 }
 
-.div-2 {
-    background-color:black;
-    color: white;
-    border-style: solid; 
-    border-color: rgb(255, 255, 255); 
-    border-radius: 3px;
+.div3 {
+    background-color:black; 
+    border-style: none; 
+    border-color: white; 
+    border-radius: 5px;
+    text-decoration: none;
     text-align: center;
+    font-size: 25px;
+    font-family: fantasy;
 }
 
 .shadow-text {
@@ -56,7 +67,6 @@ h2 {
 #large-paragraph {
     font-size: 20px;
 }
-
 
 a {
     -webkit-transition: color 3s;
@@ -98,7 +108,7 @@ form {
     margin-right: auto;
 }
 
-table {
+.table1 {
     border-collapse: collapse;
     width: 15%;
     border-style: solid;
@@ -111,18 +121,58 @@ table {
     margin-right: auto;
 }
 
-th, td {
+.table1 th, td {
     padding: 8px;
     text-align: left;
     border-bottom: 1px solid white;
 }
 
-tr:nth-child(even) {
+.table1 tr:nth-child(even) {
     background-color: gray;
 }
 
-tr:hover {
+.table1 tr:nth-child(even) {
+    background-color: black;
+}
+
+.table1 tr:hover {
     background-color: rgb(212, 85, 39);
+}
+
+.table2 {
+    border-collapse: collapse;
+    width: 15%;
+    border-style: hidden;
+    border-width: 0px;
+    border-color: black;
+    font-style: normal;
+    font-family: sans-serif;
+    color: white;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.table2 th {
+    padding: 5px;
+    text-align: center;
+    border-width: 10px;
+}
+
+.table2 td {
+    padding: 5px;
+    text-align: center;
+}
+
+.table2 tr:nth-child(even) {
+    background-color: black;
+}
+
+.table2 tr:nth-child(even) {
+    background-color: black;
+}
+
+.table2 tr:hover {
+    background-color: black;
 }
 
 /*
