--- a/Week8/W8 Project/styles.css
+++ b/Week8/W8 Project/styles.css
@@ -91,12 +91,12 @@ a:hover {
   }
 
 img {
-    float: center;
+    border-radius: 15px;
 }
 
 form {
     border-collapse: collapse;
-    width: 20%;
+    width: 25%;
     border-style: solid;
     border-width: 3px;
     border-color: white;
@@ -106,6 +106,36 @@ form {
     text-align: left;
     margin-left: auto;
     margin-right: auto;
+}
+
+input {
+    width: 75%;
+    padding: 12px 20px;
+    margin: 8px;
+    box-sizing: border-box;
+    background-color: beige;
+}
+
+input:focus {
+    background-color: coral;
+}
+
+button {
+    display: inline-block;
+    background-color: beige;
+    border-radius: 10px;
+    border: 4px double #cccccc;
+    color: black;
+    text-align: center;
+    font-size: 15px;
+    padding: 15px;
+    width: 100px;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
 }
 
 .table1 {
@@ -173,6 +203,57 @@ form {
 
 .table2 tr:hover {
     background-color: black;
+}
+
+.gallery {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: repeat(8, 1fr);
+    grid-template-columns: repeat(8, 1fr);
+    -ms-grid-rows: repeat(8, 5vw);
+    grid-template-rows: repeat(8, 5vw);
+    grid-gap: 15px;
+}
+
+.gallery__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.gallery__item--1 {
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 5;
+}
+
+.gallery__item--2 {
+    grid-column-start: 4;
+    grid-column-end: 6;
+    grid-row-start: 1;
+    grid-row-end: 5;
+}
+
+.gallery__item--3 {
+    grid-column-start: 6;
+    grid-column-end: 8;
+    grid-row-start: 1;
+    grid-row-end: 5;
+}
+
+.gallery__item--4 {
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 5;
+    grid-row-end: 10;
+}
+
+.gallery__item--5 {
+    grid-column-start: 4;
+    grid-column-end: 6;
+    grid-row-start: 5;
+    grid-row-end: 10;
 }
 
 /*
