--- a/Week8/W8 Project/styles.css
+++ b/Week8/W8 Project/styles.css
@@ -256,6 +256,13 @@ button {
     grid-row-end: 10;
 }
 
+.gallery__item--6 {
+    grid-column-start: 6;
+    grid-column-end: 8;
+    grid-row-start: 5;
+    grid-row-end: 10;
+}
+
 /*
 
 CSS has many properties we can use.
