--- a/week9/W9 Project/styles.css
+++ b/week9/W9 Project/styles.css
@@ -42,9 +42,9 @@ div {
 }
 
 .div2 {
-    background-color:azure; 
-    border-style: solid; 
-    border-color: white; 
+    background-color:black; 
+    border-style: solid;
+    border-color: black;
     border-radius: 5px;
     text-decoration: none;
 }
