--- a/week9/W9-Project/scss/custom.scss
+++ b/week9/W9-Project/scss/custom.scss
@@ -2,9 +2,11 @@
 // Option B: Include parts of Bootstrap
 
 // 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
-@import "/Promineo/node_modules/bootstrap/scss/functions";
+@import "../node_modules/bootstrap/scss/functions";
 
 // 2. Include any default variable overrides here
+$body-bg: rgb(0, 0, 0);
+$body-color: rgb(255, 255, 255);
 
 // 3. Include remainder of required Bootstrap stylesheets
 @import "../node_modules/bootstrap/scss/variables";
