--- a/week9/W9-Project/scss/custom.scss
+++ b/week9/W9-Project/scss/custom.scss
@@ -7,6 +7,10 @@
 // 2. Include any default variable overrides here
 $body-bg: rgb(0, 0, 0);
 $body-color: rgb(255, 255, 255);
+$input-btn-padding-y: .375rem;
+$input-btn-padding-x: .75rem;
+$input-btn-padding-y-sm: .25rem;
+$input-btn-padding-x-sm: .5rem;
 
 // 3. Include remainder of required Bootstrap stylesheets
 @import "../node_modules/bootstrap/scss/variables";
@@ -19,5 +23,13 @@ $body-color: rgb(255, 255, 255);
 @import "../node_modules/bootstrap/scss/images";
 @import "../node_modules/bootstrap/scss/containers";
 @import "../node_modules/bootstrap/scss/grid";
+@import "../node_modules/bootstrap/scss/forms";
+@import "../node_modules/bootstrap/scss/nav";
+@import "../node_modules/bootstrap/scss/navbar";
+@import "../node_modules/bootstrap/scss/dropdown";
+@import "../node_modules/bootstrap/scss/forms";
+@import "../node_modules/bootstrap/scss/buttons";
+@import "../node_modules/bootstrap/scss/containers";
+@import "../node_modules/bootstrap/scss/tables";
 
 // 5. Add additional custom code here
