updated index and contact page

--- a/week9/W9-Project/scss/custom.scss
+++ b/week9/W9-Project/scss/custom.scss
@@ -30,6 +30,7 @@ $input-btn-padding-x-sm: .5rem;
 @import "../node_modules/bootstrap/scss/buttons";
 @import "../node_modules/bootstrap/scss/containers";
 @import "../node_modules/bootstrap/scss/tables";
+@import "../node_modules/bootstrap/scss/forms/form-check";
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 
 // 5. Add additional custom code here
