--- a/week9/W9-Project/scss/custom.scss
+++ b/week9/W9-Project/scss/custom.scss
@@ -7,14 +7,12 @@
 // 2. Include any default variable overrides here
 $body-bg: rgb(0, 0, 0);
 $body-color: rgb(255, 255, 255);
-$input-btn-padding-y: .375rem;
-$input-btn-padding-x: .75rem;
-$input-btn-padding-y-sm: .25rem;
-$input-btn-padding-x-sm: .5rem;
+$navbar-default-bg: gray;
 
 // 3. Include remainder of required Bootstrap stylesheets
 @import "../node_modules/bootstrap/scss/variables";
 @import "../node_modules/bootstrap/scss/mixins";
+@import "../node_modules/bootstrap/scss/utilities";
 
 // 4. Include any optional Bootstrap components as you like
 @import "../node_modules/bootstrap/scss/root";
