--- a/week9/W9-Project/style.css
+++ b/week9/W9-Project/style.css
@@ -12,7 +12,7 @@ h2 {
     font-size: 50px;
 }
 
-.h2-left {
+h3 {
     color:azure;
     text-align: left;
     font-family: fantasy;
@@ -42,8 +42,22 @@ div {
     font-family: fantasy;
 }
 
+.div4 {
+    background-color:black; 
+    text-align: center;
+    border-style:ridge;
+    border-color: white;
+}
+
 .table {
     width: 25%;
     margin-left: auto;
     margin-right: auto;
 }
+
+.carousel {
+    margin-left: auto;
+    margin-right: auto;
+    width:600px;
+    height:600px;
+  }
