added social media links to all pages

--- a/week9/W9-Project/style.css
+++ b/week9/W9-Project/style.css
@@ -61,3 +61,39 @@ div {
     width:600px;
     height:600px;
   }
+
+  /* Style all font awesome icons */
+.fa {
+    padding: 50px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+  }
+  
+  /* Hover Effect */
+  .fa:hover {
+    opacity: 0.7;
+  }
+  
+  /* Facebook */
+  .fa-facebook {
+    background: none;
+    color: white;
+  }
+  
+  /* Twitter */
+  .fa-twitter {
+    background: none;
+    color: white;
+  }
+  /* Instagram */
+  .fa-instagram {
+      background: none;
+      color: white;
+  }
+  /* YouTube */
+  .fa-youtube {
+      background: none;
+      color: white;
+  }
