--- a/Week11/Class/style.css
+++ b/Week11/Class/style.css
@@ -1,7 +1,11 @@
-#bg{
-    background-color: rgb(2, 0, 36);
+body {
+    background: linear-gradient(to bottom, rgb(1, 134, 236) 0%, rgba(3,75, 82, 0) 100%);
+    height: 100%;
+    margin: 0;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    color: whitesmoke;
 }
-
 .container{
     text-align: center;
 }
