--- a/Week14/W14-Project/src/App.css
+++ b/Week14/W14-Project/src/App.css
@@ -49,6 +49,8 @@ h5 {
 
 body {
   font-family: 'Cooper Black', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  background-image: url("https://th.bing.com/th/id/R.8f7d7e767ef1641b3a4b9497a1d5e540?rik=Qkx4Uyi5UHcqlQ&riu=http%3a%2f%2fwallup.net%2fwp-content%2fuploads%2f2016%2f04%2f06%2f350558-stars-landscape-night-long_exposure-reflection-lake-multiple_display.jpg&ehk=YvEaDBjJcojFXVuu10upZIJeg3uI4YJZ69SlHSQ9e3A%3d&risl=&pid=ImgRaw&r=0");
+  background-size: 100%;
 }
 
 a {
