Updated movie-app files

--- a/Week14/movie-app/src/App.css
+++ b/Week14/movie-app/src/App.css
@@ -36,3 +36,56 @@
     transform: rotate(360deg);
   }
 }
+
+h1 {
+  text-align: center;
+  color: white;
+}
+
+h2 {
+  text-align: center;
+  color: white;
+}
+
+h5 {
+  font-family: 'Cooper Black', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  text-align: center;
+}
+
+body {
+  font-family: 'Cooper Black', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  background-image: url("https://th.bing.com/th/id/R.8f7d7e767ef1641b3a4b9497a1d5e540?rik=Qkx4Uyi5UHcqlQ&riu=http%3a%2f%2fwallup.net%2fwp-content%2fuploads%2f2016%2f04%2f06%2f350558-stars-landscape-night-long_exposure-reflection-lake-multiple_display.jpg&ehk=YvEaDBjJcojFXVuu10upZIJeg3uI4YJZ69SlHSQ9e3A%3d&risl=&pid=ImgRaw&r=0");
+  background-size: 115%;
+}
+
+input[type="radio"] {
+  display: none;
+}
+
+.star {
+  cursor: pointer;
+  transition: color 200ms;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+a:hover {
+  color:#61dafb;
+}
+
+p {
+  font-family:'Candara', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.card-img-top {
+  width: auto;
+  height: 25vw;
+  object-fit: cover;
+}
+
+#rating {
+  font-family: 'Cooper Black', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
