--- a/Week14/movie-app/src/App.css
+++ b/Week14/movie-app/src/App.css
@@ -81,8 +81,8 @@ p {
 }
 
 .card-img-top {
-  width: 100%!important;
-  height: 25vw!important;
+  width: 100%;
+  height: 25vw;
   object-fit: cover;
 }
 
