--- a/Week18/w18-final-project/src/styles/menu.css
+++ b/Week18/w18-final-project/src/styles/menu.css
@@ -1,60 +1,17 @@
-.navigation {
-  position: fixed;
-  top: 0;
-  z-index: 2;
-  background-color: #ffffff;
-  width: 100%;
-  border-bottom: 1px solid #dbdbdb;
-}
-
-.navigation .container {
-  padding: 1em 0 0.9em 0;
+.menu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  max-width: 1000px;
-  margin: 0 auto;
+  padding-right: 1.5em;
 }
 
-.navigation .container .logo {
-  padding: 0 1em;
-  width: 100px;
+.menu .icon {
+  margin-right: 1.5em;
+  width: 23px;
+  height: 23px;
 }
 
-.navigation .container .logo:hover {
+.menu .iconhover {
   cursor: pointer;
-}
-
-.navigation .container .search {
-  border: 1px solid #dbdbdb;
-  border-radius: 3px;
-  background-color: #fafafa;
-  min-width: 225px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.navigation .container .search .searchIcon {
-  width: 10px;
-  opacity: 0.4;
-  margin-right: 0.3em;
-}
-
-@media only screen and (max-width: 500px) {
-  .search {
-    display: none !important;
-  }
 }
 /*# sourceMappingURL=menu.css.map */
