--- a/Week18/w18-final-project/src/styles/cards.css
+++ b/Week18/w18-final-project/src/styles/cards.css
@@ -1,1 +1,10 @@
-/* No CSS *//*# sourceMappingURL=cards.css.map */
+.cards {
+  width: 600px;
+}
+
+@media only screen and (max-width: 600px) {
+  .cards {
+    width: 100%;
+  }
+}
+/*# sourceMappingURL=cards.css.map */
