--- a/Week18/w18-final-project/src/styles/sidebar.css
+++ b/Week18/w18-final-project/src/styles/sidebar.css
@@ -1,1 +1,11 @@
-/* No CSS *//*# sourceMappingURL=sidebar.css.map */
+.sidebar {
+  width: 320px;
+  padding: 7em 2em 0 2em;
+}
+
+@media only screen and (max-width: 1024px) {
+  .sidebar {
+    display: none;
+  }
+}
+/*# sourceMappingURL=sidebar.css.map */
