--- a/Week18/w18-final-project/src/styles/menu.scss
+++ b/Week18/w18-final-project/src/styles/menu.scss
@@ -7,8 +7,12 @@
         width: 23px;
         height: 23px;
 
-        &hover {
+        &:hover {
             cursor: pointer;
         }
+    }
+
+    .profileIcon {
+        margin-top: -3px;
     }
 }
