--- a/Week18/w18-final-project/src/styles/menu.css
+++ b/Week18/w18-final-project/src/styles/menu.css
@@ -11,7 +11,11 @@
   height: 23px;
 }
 
-.menu .iconhover {
+.menu .icon:hover {
   cursor: pointer;
+}
+
+.menu .profileIcon {
+  margin-top: -3px;
 }
 /*# sourceMappingURL=menu.css.map */
