--- a/Week18/w18-final-project/src/styles/profile.css
+++ b/Week18/w18-final-project/src/styles/profile.css
@@ -18,7 +18,7 @@
       -ms-flex-direction: column;
           flex-direction: column;
   margin-left: 1em;
-  max-width: 180px;
+  min-width: 180px;
 }
 
 .profile .textContainer .accountName {
@@ -40,7 +40,7 @@
 }
 
 .profile a {
-  text-align: left;
+  text-align: right;
   width: 100%;
 }
 /*# sourceMappingURL=profile.css.map */
