--- a/Week18/w18-final-project/src/styles/profile.scss
+++ b/Week18/w18-final-project/src/styles/profile.scss
@@ -11,7 +11,7 @@
         display: flex;
         flex-direction: column;
         margin-left: 1em;
-        max-width: 180px;
+        min-width: 180px;
 
         .accountName {
             font-weight: 500;
@@ -33,7 +33,7 @@
     }
 
     a {
-        text-align: left;
+        text-align: right;
         width: 100%;
     }
 }
