--- a/Week18/w18-final-project/src/styles/css/App.css
+++ b/Week18/w18-final-project/src/styles/css/App.css
@@ -32,6 +32,22 @@ a {
   font-weight: 500;
 }
 
+.profileBody {
+  text-align: center;
+  padding-left: auto;
+  padding-right: auto;
+  justify-content: center;
+}
+
+.profileImg {
+  width: 400px;
+  height: 400px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  object-fit: cover;
+}
+
 @media only screen and (max-width: 1024px) {
   main .container {
     -webkit-box-pack: center !important;
